# thesis-engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  vshader.h
configuration/: root_directory.h.in
include/: fshader.h  shader_s.h  vshader.h
src/: main.cpp
